--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -250,8 +250,12 @@ The goals of the seminar are to plan how to widen and deepen the impact of softw
 %:=== PLEDGES ===
 \section{Responsible Academic Software Development}
 
-\todo{Pledges plus explanations}
-
+\todo{Need some intro text.
+Explain what motivates these pledges.
+Pledges are intended to be ``actionable.''
+Why the five categories?
+Why so many?
+Point out that detailed discussions follow below.}
 
 
 % ----------
