--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -162,6 +162,12 @@ Fill this in as the rest starts to stabilize.
 
 \on{Here I picked just one of the pledges of each group of five. Otherwise 18 pledges will be too many for the TLDR.}
 
+\on{Terms that need to be defined/introduced:\\
+- Research Software Engineer\\
+- intellectual contribution of software\\
+- software sustainability\\
+}
+
 % ----------
 \paragraph{Citation \& Reviewing}
 \begin{itemize}
@@ -192,9 +198,10 @@ Fill this in as the rest starts to stabilize.
 % ----------
 \paragraph{Software Projects}
 \begin{itemize}
-\item I will develop software in the open from the start, whenever possible.
+\item I will develop software as open source from the start, whenever possible.
+% WAS: I will develop software in the open from the start, whenever possible.
 
-\on{kinda complicated. howzabout "i will choose an open source license ..." }
+% \on{kinda complicated. howzabout "i will choose an open source license ..." }
 
 %\item I will acknowledge that reading and understanding source code is a legitimate part of the academic discussion.
 %\item I will match proposed software engineering practices to the actual needs and resources of the project.
@@ -291,8 +298,8 @@ Explain that we first list the pledges, and then follow with detailed discussion
 % ----------
 \paragraph{Software Projects}
 \begin{itemize}
-\item I will develop software in the open from the start, whenever possible.
-\on{Why not simply, "I will develop open source software, whenever possible"}
+\item I will develop software as open source from the start, whenever possible.
+% WAS: I will develop software in the open from the start, whenever possible.
 \item I will acknowledge that reading and understanding source code is a legitimate part of the academic \chg{discussion}{discourse}.
 \on{a bit convoluted?}
 \item I will match proposed software engineering practices to the actual needs and resources of the project.
@@ -320,6 +327,8 @@ Explain that we first list the pledges, and then follow with detailed discussion
 \subsection{Citation \& Reviewing}
 
 \todo{intro needed?}
+
+\on{In the intro we need to introduce the notion of an RSE}
 
 % ----------
 \paragraph{I will properly cite software used to produce my research results.}
@@ -477,20 +486,23 @@ Funding organizations to provide money for software awards, discipline societies
 
 \todo{intro needed?}
 
+\on{needs a discussion clarifying what is meant by ``intellectual contribution''}
+
 % ----------
 \paragraph{I will publish the intellectual contributions of my research software.}
 
-%:HERE <==============
-\onhere
 
+\on{Not very clear what is meant by "intellectual contributions". Can the pledge be rewritten to make this clear? Or does it go into the discussion?}
 
 \emph{Background.} 
-If you want to get credit for intellectual contributions in software, you have to explicitly make clear what they are. Writing this down is valuable for other RSE?s and scientists alike. Moreover, when writing down your intellectual contributions, you will put them in a larger context, forcing yourself to take a broader viewpoint. Publishing these contributions in international peer-reviewed venues strengthens and legitimizes the case that there are significant intellectual contributions in the software.
+If you want to get credit for intellectual contributions in software, you have to explicitly make clear what they are. Writing this down is valuable for other RSEs and scientists alike. Moreover, when writing down your intellectual contributions, you will put them in a larger context, forcing yourself to take a broader viewpoint. Publishing these contributions in international peer-reviewed venues strengthens and legitimizes the case that there are significant intellectual contributions in the software.
 
-Contradictions or concerns.
-Of course, writing a paper will consume valuable time that cannot be spent on the software itself. This should be made explicit before a software project starts. Expectation management is needed. PIs have to be on-board for this to work. Authorship rules (\eg RSEs only, RSE lead and PIs also co-author, \etc) for these papers should be discussed in advance.
+\on{This does not clarify what is intended by ``intellectual contributions in software''. Some examples should be given. Are we talking about innovative algorithms? Or open flexible design to support a range of experiments? What is the dividing line between ``intellectual contribution'' and ``software engineering for research''?}
 
-What small actions are needed?
+\emph{Contradictions or concerns.}
+Of course, writing a paper will consume valuable time that cannot be spent on the software itself. This should be made explicit before a software project starts. Expectation management is needed. PIs have to be on-board for this to work. Authorship rules for these papers should be discussed in advance (\eg RSEs only, RSE lead and PIs also co-authors, \etc).
+
+\emph{What small actions are needed?}
 Write papers on intellectual contributions in software. Of course, this also implies that you will perform peer review of similar papers written by others. Go to relevant venues to disseminate the work you did.
 
 Why would those small actions have impact?
@@ -504,38 +516,48 @@ We need sufficient venues for this type of work (journals, conferences, \etc).  
 % ----------
 \paragraph{I will distinguish the intellectual contribution of my software from its service contribution.}
 
+\on{rather obscure}
 
 \on{formerly: I will teach people that software has an intellectual contribution and help software authors distinguish their intellectual contribution from their service contribution.}
 
-Scientific/academic/research software often contains novel scientific and intellectual contributions that go far beyond ?infrastructure? and should not be artificially distinguished from ?actual science.? I will respond to blog posts claiming otherwise and will produce evidence to support this. When I encounter impressive software projects, I will showcase them on any social media that I use.
+Scientific/academic/research software often contains novel scientific and intellectual contributions that go far beyond infrastructure and should not be artificially distinguished from actual science. I will respond to blog posts claiming otherwise and will produce evidence to support this. When I encounter impressive software projects, I will showcase them on any social media that I use.
 
 % ----------
 \paragraph{I will invite developers of software that enables research to be co-authors on papers about that research.}
+
+
+\on{delete "about that research"?}
+
+\on{Can this be folded into the first pledge in this section?}
+
 
 \todo{MISSING?}
 
 % ----------
 \paragraph{I will publish how I organize and run my software projects.}
 
-?	I will encourage publication about the organizations that are creating scientific software, including which tools they use, their methodologies, how they motivate participation, how they choose code review systems, \etc
+% WAS: I will encourage publication about the organizations that are creating scientific software, including which tools they use, their methodologies, how they motivate participation, how they choose code review systems, \etc
+
+%\on{unclear. do we mean process? tools?}
+
 
 \emph{Background.} The environment in which software is developed, particularly in academia, can shape the reliability, utility, and social impact of that software.  This environment includes processes and standards such as communication methods (technical and social), code review (mechanisms, standards and platforms), community engagement (social and professional rewards and incentives), and management structures and strategies.
 
-Improving the awareness of methodologies (successful and unsuccessful) as well as encouraging descriptions of those methodologies can improve the overall efficiency of software development in academia.  In particular, there is a vast literature related to software development methodologies in industrial settings; while not all of these will directly translate to development of academic software, as incentive, timeline and requirements are often different, this literature can help us to understand how to graft, shape, or invent software practices for academic software.
-
-The WSSSPE conference series has collected practices such as these from different communities; disseminating this information to audiences that have not yet seen it will likely increase uptake and awareness.
+Improving the awareness of methodologies (successful and unsuccessful) as well as encouraging descriptions of those methodologies can improve the overall efficiency of software development in academia.  In particular, there is a vast literature related to software development methodologies in industrial settings. While not all of this literature will directly translate to development of academic software, as incentive, timeline and requirements are often different, this literature can help us to understand how to graft, shape, or invent software practices for academic software.
+The WSSSPE conference series\footnote{\url{http://wssspe.researchcomputing.org.uk}} has collected such practices from different communities; disseminating this information to audiences that have not yet seen it will likely increase uptake and awareness.
 
 Technical aspects as well as social aspects can guide the development practices of software in positive or negative directions.  For instance, this includes the tenor of communication as well as the medium of communication.  Platforms that allow and enable easy engagement and modification as well as appropriate credit (\ie pull requests to DVCS as opposed to patch-based submissions to non-distributed VCS) improve overall sense of engagement on the part of software developers both within and external to the core development team.
 
-\emph{Contradictions or concerns.} Are these part of the ?intellectual contributions? of the software itself?  Do the practices need to find a separate venue?  (WSSSPE)
+\emph{Contradictions or concerns.} Are these part of the ``intellectual contributions'' of the software itself?  Do the practices need to find a separate venue (such as WSSSPE)?
 
-\emph{What small actions are needed?} Blogging? Upfronting the ?forgotten? aspects in project contribution guidelines.
+\emph{What small actions are needed?} Blogging? \chg{Upfronting}{Emphasizing} the ``forgotten'' aspects in project contribution guidelines.
 
+Why would those small actions have impact?
 In a project homepage (whatever form that may take), describing the processes and practices can encourage engagement.  Describing the reasoning behind those processes and practices will help individuals to decide how to conduct their own projects in the future.  
 
-Why would those small actions have impact: Leading by example. Practices are important but not recognized as practices that can be designed.
+% Leading by example. Practices are important but not recognized as practices that can be designed.
 
-Who else needs to act: (?)
+% Who else needs to act: (?)
 
 
 % --------------------------------------------------
@@ -544,72 +566,70 @@ Who else needs to act: (?)
 \todo{intro needed?}
 
 % ----------
-\paragraph{I will develop software in the open from the start, whenever possible.}
+\paragraph{I will develop software as open source from the start, whenever possible.}
+% WAS: I will develop software in the open from the start, whenever possible.
 
-Background
+% \on{NB Absorbs: I will help scientists improve the quality of their software without passing judgment.}
+% \on{also: I will encourage software authors to release their software without judgement. }
 
-Initially developing software in closed fora often loses the benefits of open source processes. This includes allowing others to determine who to credit and follow up regarding technical details. Open access allows developers to adapt code to related contexts. It allows a community of users to share the costs of sustaining the resource. Users can determine how well it fits their needs by inspecting details that are not visible from the external interfaces. In contexts where the quality of the software is critical, open access facilitates verification of correctness. Similarly, security flaws can be identified by a larger group, enabling earlier resolution.
+\emph{Background.}
+Initially developing software in closed fora often loses the benefits of open source processes. This includes allowing others to determine whom to credit and follow up regarding technical details. Open access allows developers to adapt code to related contexts. It allows a community of users to share the costs of sustaining the resource. Users can determine how well it fits their needs by inspecting details that are not visible from the external interfaces. In contexts where the quality of the software is critical, open access facilitates verification of correctness. Similarly, security flaws can be identified by a larger group, enabling earlier resolution.
  
 Starting as you intend to continue is important, because projects have their own momentum; it is far more difficult to change once you have established practices and infrastructure. Indeed transitioning from a typical, co-located, PI-directed software development process to an open process involves substantial organizational change across at least three dimensions 1) Governance and Leadership, 2) Collaboration infrastructure, and 3) Contribution processes (Howison, 2014).
 
-Contradictions or concerns
-\begin{itemize}
-\item Some institutions prohibit release of software under FOSS license without IP review. This can often be addressed by planning and stating the code will be open sourced at the time funding is sought --- that is, in the proposal itself. When a project is initiated, this basis allows such reviews to be addressed in the absence of a concrete product.
-\item There is literature on success in open source that argues that projects should start with a (nearly) working software application, not just ideas and plans. Senyard and Michlmeyer (2004). One possible solution here is to use infrastructure that can be easily opened, such as private repositories on github, but carefully choose when to flip that switch. That does not, however, change practices such as governance.
-\end{itemize}
+A commonly used argument for not releasing the code associated with a research paper into the wild is that the code is ``bad'' and the scientist will be judged negatively based on the bad quality of the code.
+%\meh{Dismissive, uncharitable comments about existing code, as well as identifying a component that is ``easy'' to ``just'' do in some particular way.}
+Dismissive, uncharitable comments about existing code can lead to online shaming, creating and perpetuating a negative attitude towards publishing code developed by scientists.
+% There is an issue of shame in the research software community which often prevents researchers from releasing the code that facilitated their research. 
+This in turn leads to a body of computational research that is extremely difficult to reproduce. It is also wasteful of resources since it costs a great deal of money to develop that software. It takes longer to build on such research since the foundations need to be reimplemented.
 
-Specific actions:
-Establish a specific plan for releasing scientific source code from day one of development. This should include:
-\begin{itemize}
-\item an initial specification of license, compliant with the sponsoring institution?s IP policies;
-\item a plan for for relicensing in the future should the business environment surrounding a project?s development change;
-\item a plan for identifying and mitigating license conflicts with software dependencies that may be introduced into the current product;
-\item a policy for applying this software licensing plan uniformly to all (or as many as allowable) projects under a specific manager?s supervision. 
-\end{itemize}
+A very large movement behind this openness is already well underway and has resulted in more than one manifesto~\cite{barba_reproducibility_2012,alex_holcombe_open_2011}.%
+\footnote{\url{http://lorenabarba.com/gallery/reproducibility-pi-manifesto/}, \url{http://www.openaccesspledge.com/}}
 
 
+\emph{Contradictions or concerns.}
+Some institutions prohibit release of software under a FOSS license without IP review. This can often be addressed by planning and stating the code will be open sourced at the time funding is sought, \ie in the proposal itself.
+\meh{When a project is initiated, this basis allows such reviews to be addressed in the absence of a concrete product.} \on{obscure}
+
+There is literature on success in open source arguing that projects should start with a (nearly) working software application, not just ideas and plans~\cite{senyard2004have}. One possible solution here is to use infrastructure that can be easily opened, such as private repositories on github, but carefully choose when to flip that switch. That does not, however, change practices such as governance.
+
+We want scientists to release their code, or even better develop their code completely into the open, however, we criticize them for releasing code that does not comply to a high standard of quality. 
+
+There have been cases where researchers have released their code and have been publicly shamed by the software engineering community because it was of low quality.
+\todo{(NEED CITATIONS- SOMETHING WAS ON SLASHDOT A COUPLE OF YEARS AGO)}
 
 
-\on{NB Absorbs: I will help scientists improve the quality of their software without passing judgment.}
-
-\emph{Background.} A commonly used argument for not releasing the code associated with a research paper into the wild is that the code is ?bad? and the scientist will be judged negatively based on the bad quality of his code. Dismissive, uncharitable comments about existing code, as well as identifying a component that is ?easy? to ?just? do in some particular way. This leads to online shaming creating and perpetuating a negative attitude towards publishing code developed by scientists.
-
-\emph{Contradictions or concerns.} We want scientist to release their code, or even better develop their code completely into the open, however, we criticize them for releasing code that does not comply to a high standard of quality. 
-
-Actions required: 
+\emph{What small actions are needed?}
 Promote a culture acknowledging that any code contribution attached to a research paper that makes is possible to reproduce research results is valuable, regardless of the quality of the code. Once the code is freely available its quality can be improved.
 Provide, at the university level, services for code review that scientists wanting to release their code can use. This can increase both their confidence and their technical skills. 
 
-
-\on{was: I will encourage software authors to release their software without judgement. }
-
-\emph{Background.} why is this important, has anyone written about it (citations)
-
-There is an issue of shame in the research software community which often prevents researchers from releasing the code that facilitated their research. This leads to a body of computational research that is extremely difficult to reproduce. It is also wasteful of resources since it cost a great deal of money to develop that software. It takes longer to build on such research since the foundations need to be reimplemented. A very large movement behind this openness is already well underway and has resulted in more than one manifesto (\url{http://lorenabarba.com/gallery/reproducibility-pi-manifesto/}, \url{http://www.openaccesspledge.com/})
-
-Contradictions or concerns
-
-There have been cases where researchers have released their code and have been publicly shamed by the software engineering community because it was of low quality. (NEED CITATIONS- SOMETHING WAS ON SLASHDOT A COUPLE OF YEARS AGO)
-
-What small actions are needed
+Establish a specific plan for releasing scientific source code from day one of development. This should include:
+\begin{itemize}
+\item an initial specification of the software license, compliant with the sponsoring institution's IP policies;
+\item a plan for for relicensing in the future should the business environment surrounding a project's development change;
+\item a plan for identifying and mitigating license conflicts with software dependencies that may be introduced into the current product;
+\item a policy for applying this software licensing plan uniformly to all (or as many as allowable) projects under a specific manager's supervision. 
+\end{itemize}
 
 Give regular talks, seminars and courses on releasing software to the public. 
 Sit alongside individual researchers and take them through how to use github (say) by actually making their code public for the first time.
 
 Whenever a paper is published within your institution that explicitly mentions the development of code, speak to the author about releasing the software behind it. Write and promote articles giving explicit examples of good practice.
 
-Why would those small actions have impact.
+%Why would those small actions have impact.
 
 
-
-Who else needs to act
-
+Who else needs to act?
 Reviewers of papers need to insist that code behind papers is released. Funders need to make software release part of the requirement for funding.
-
 
 
 % ----------
 \paragraph{I will acknowledge that reading and understanding source code is a legitimate part of the academic discussion.}
+
+\on{a bit convoluted?}
+
+%:HERE <================
+\onhere
 
 An intellectual contribution can not be appraised if it is not even observed. Reading source code is at least as hard as reading an academic paper is. This is partly because it actually is an intellectual contribution. To motivate reading source code to others, consider that the quality of their research [method] is directly dependent on the quality of the code they use, similar to the literature they cite to support the background theory on which their research is based. 
 
@@ -632,6 +652,10 @@ Education in software and engineering, or programming education, needs to pay at
 \paragraph{I will match proposed software engineering practices to the actual needs and resources of the project.}
 
 \on{NB: formerly "I will consider the context in which software engineering "solutions" are applicable, and acknowledge that they are substantial investments for scientists."}
+
+
+\on{should we explicitly say "the people" instead of just "the project"?}
+
 
 Background. By necessity, software is often developed with somewhat abstracted sense of the ultimate use case. Researchers who adopt our solutions must be provided assistance in mapping their intellectual context to that of the software solution. This includes help with adapting their existing analytical processes, formatting data for use by the solution, and guidance on how its outputs should be interpreted. Failing to provide this kind of help can lead to mutual frustration, wasted research time or inappropriate outputs, and ultimately undermines the value and sustainability of the solution. Furthermore, being in the trusted position of providing guidance and feedback has to be continually legitimized by responding to real concerns in ways that empower, rather than shame. Adopting a tool or process demands time and energy, but is also associated with great uncertainty. It is often not clear (1) whether the solution is appropriate, and (2) when one should top pushing on a solution.
 
@@ -686,6 +710,9 @@ A number of steps should be undertaken toward this:
 % ----------
 \paragraph{I will contribute to sustaining software I use and rely on.}
 
+\jv{"I will contribute to the open software projects that I use and rely on"}
+
+
 \on{was: I will make explicit my intentions to sustain (or not sustain) software I release.}
 
 \emph{Background.} Some projects are intended to be long-lived and widely usable; others are intended only to create outputs for a single research project or even paper. Potential users should be aware of the author?s intentions for a project before deciding to rely on it.  
@@ -698,9 +725,10 @@ Actions required: A framework for understanding different kinds of software woul
 % ----------
 \paragraph{I will package, release and archive versions of my software.}
 
-
-
 \on{was: I will contribute to supporting software I use and rely on.}
+
+
+\jv{this needs semantic versioning! put this in the pledge or the discussion?}
 
 \emph{Background.}
 No software project is an island. We all rely on other software to build our software. If we use free software, such as tools, libraries and compilers, then it is fair and reasonable that we try and support these projects if we can. This might include citing it, letters of support, reporting issues, fixing bugs, contributing new features or monetary contributions.
@@ -731,6 +759,13 @@ Who else needs to act:
 
 
 \on{Formerly: I will understand what sort of project I'm working with/on. I will help others articulate these choices for their own projects.}
+
+
+\on{somewhat mysterious. should be more precise}
+\jv{note the distinction between "sustainable" and "maintainable". A piece of software could be very clean and maintainable, but there might not be the processes or manpower available to sustain it.}
+
+
+
 
 \emph{Background.} Academic software varies widely along dimensions relevant for planning development. Some projects are intended to be long-lived and widely usable; others are intended only to create outputs for a single research project or even paper. Software engineering practices that are appropriate?indeed necessary?for the former may be overkill for the later. 
 
