--- a/eas.bib
+++ b/eas.bib
@@ -1,6 +1,15 @@
 % References. First version from:
 % https://github.com/katyhuff/2016-06-19-dagstuhl/blob/gh-pages/dagstuhl-manifesto.bib
 
+@inproceedings{senyard2004have,
+  title={How to have a successful free software project},
+  author={Senyard, Anthony and Michlmayr, Martin},
+  booktitle={Software Engineering Conference, 2004. 11th Asia-Pacific},
+  url={http://www.cyrius.com/publications/senyard_michlmayr-successful_project.pdf},
+  pages={84--91},
+  year={2004},
+  organization={IEEE}
+}
 
 @misc{onto_soft_what_2016,
 	title = {What is a {Geoscience} {Paper} of the {Future} {\textbar} {The} {Geoscience} {Papers} of the {Future} {Initiative}},
