updates to names and affiliations
some fixes to correct my names and some affiliations to the official university names

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -39,17 +39,17 @@
 \author[11]{Carole Goble}\affil[11]{University of Manchester, UK}
 \author[12]{Robert Haines}\affil[12]{University of Manchester, UK}
 \author[13]{Robert Hirschfeld}\affil[13]{Hasso-Plattner-Institut -- Potsdam, Germany}
-\author[14]{James Howison}\affil[14]{University of Texas -- Austin, US}
-\author[15]{Katy Huff}\affil[15]{University of California -- Berkeley, US}
+\author[14]{James Howison}\affil[14]{University of Texas at Austin, US}
+\author[15]{Katy Huff}\affil[15]{University of California Berkeley, US}
 \author[16]{Caroline Jay}\affil[16]{University of Manchester, UK}
-\author[17]{Dan Katz}\affil[17]{University of Illinois at Urbana Champaign, US}
+\author[17]{Daniel S. Katz}\affil[17]{University of Illinois Urbana-Champaign, US}
 \author[18]{Claude Kirchner}\affil[18]{INRIA -- Le Chesnay, France}
 \author[19]{Katie Kuksenok}\affil[19]{University of Washington -- Seattle, US}
 \author[20]{Ralf L\"{a}mmel}\affil[20]{Universit\"{a}t Koblenz-Landau, Germany}
 \author[21]{Oscar Nierstrasz}\affil[21]{University of Bern, Switzerland}
-\author[22]{Matt Turk}\affil[22]{University of Illinois at Urbana Champaign, US}
+\author[22]{Matt Turk}\affil[22]{University of Illinois Urbana-Champaign, US}
 \author[23]{Rob van Nieuwpoort}\affil[23]{VU University Amsterdam, The Netherlands}
-\author[24]{Matthew Vaughn}\affil[24]{University of Texas -- Austin, US}
+\author[24]{Matthew Vaughn}\affil[24]{University of Texas at Austin, US}
 \author[25]{Jurgen Vinju}\affil[25]{CWI -- Amsterdam, The Netherlands}
 
 %
